# stimmungskalender

./: .dockerignore  .env.sample  .flake8  .gitattributes  .gitignore  Makefile  README.md  _config.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
docker/app/: Dockerfile  django-env-pgsql  django-env-sqlite  entrypoint.sh  env  uwsgi.ini
docker/db/: env
docker/web/: Dockerfile  nginx.conf  sk.conf
docs/: docker.md  faq.md  install.md  manual.md  quickstart.md
docs/examples/: env-prod.md  init.service.md  install.md  nginx.config.md  uwsgi.config.md
node/: package-lock.json  package.json  webpack.config.js
node/src/js/: main.js  plotly.js  sk.base.js  sk.calendar.js  sk.datePicker.js  sk.graph.js  sk.mood.form.js  sk.theme.js  sk.util.js
node/src/scss/: bootstrap.scss  datePicker.scss  main.scss  stimmungskalender.css  stimmungskalender.scss
requirements/: common.txt  dev.txt
scripts/: docker-quickstart.sh  node.sh  quickstart.sh
stimmungskalender/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
web/: admin.py  api.py  context_processors.py  models.py  mood_colors.py  query_params.py  response.py  serializers.py  structs.py  util.py  views.py
web/api/: serializers.py
web/js/: package-lock.json  package.json  webpack.config.js
web/js/src/: datePicker.scss  sk.base.js  sk.calendar.js  sk.datePicker.js
web/management/commands/: clear_django_cache.py  del_empty_weeks.py  generate_entry_week.py  generate_random_data.py  generate_week_date.py  mail.py
web/migrations/: 0001_initial.py  0002_auto_20210805_2201.py  0003_auto_20210806_1612.py  0004_auto_20210806_1638.py  0005_rename_notes_note_note.py  0006_auto_20210808_1819.py  0007_note_year.py  0008_usersettings.py  0009_alter_usersettings_user.py  0010_alter_usersettings_user.py  0011_alter_entry_day.py  0012_rename_note_week.py  0013_week_week_date.py  0014_entry_week.py  0015_auto_20211115_2119.py  0016_auto_20211117_1646.py  0017_auto_20211117_1738.py  0018_auto_20211117_1908.py  0019_week_unique entry.py  0020_usersettings_js_entry_form.py  0021_remove_usersettings_js_entry_form.py  0022_usersettings_view_day_form_and_more.py  0023_usermoodcolorsettings_remove_week_unique entry_and_more.py  0024_usersettings_use_js_btn.py
web/service/: bar_graph.py  base_graph.py  pie_graph.py  scatter_graph.py  settings.py  sk.py
web/static/css/: stimmungskalender.css
web/static/js/: calendar.js  js-year-calendar.min.js
web/static/ng-sk/: main.js  main.js.map  polyfills.js  polyfills.js.map  runtime.js  runtime.js.map  styles.css  styles.css.map
web/templates/django_registration/: registration_closed.html  registration_complete.html  registration_form.html
web/templates/ng-sk/: index.html
web/templates/registration/: base.html  login.html
web/templates/web/: base.html  base.html.orig  calendar.html  graph.html  i18n.html  search.html  (+2 more)
web/templatetags/: date_fmt.py  get_item.py  relative_url.py
(+39 files in other folders)
