[tool.poetry]
name = "stimmungskalender"
version = "1.8.0"
description = "Self-hosted mood calendar"
authors = ["Rainer Hihn <hihn.rainer@gmail.com>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"
dj-database-url = "^2.1.0"
dj-rest-auth = "^5.0.2"
django-cache-url = "^3.4.5"
django-cors-headers = "^4.3.1"
django-registration = "^3.4"
django-rosetta = "^0.10.0"
djangorestframework-dataclasses = "^1.3.1"
djangorestframework-simplejwt = "^5.3.1"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.1"
ipython = "^8.22.2"
python-decouple = "^3.8"
psycopg2 = "^2.9.10"
pyyaml = "^6.0.1"  # https://github.com/yaml/pyyaml/issues/601
jsonschema = "^4.21.1"  # Version 4.18.0 started to require Rust

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ipdb = "^0.13.13"
setuptools = "^69.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.djlint]
profile = "django"
