[tool.poetry]
name = "stimmungskalender"
version = "1.8.0"
description = "Self-hosted mood calendar"
authors = ["Rainer Hihn <hihn.rainer@gmail.com>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.5"
dj-database-url = "^2.3.0"
dj-rest-auth = "^7.0.1"
django-cache-url = "^3.4.5"
django-cors-headers = "^4.6.0"
django-registration = "^5.1.0"
django-rosetta = "^0.10.1"
djangorestframework-dataclasses = "^1.3.1"
djangorestframework-simplejwt = "^5.4.0"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.28.0"
ipython = "^8.31.0"
python-decouple = "^3.8"
psycopg2 = "^2.9.10"
pyyaml = "^6.0.2"  # https://github.com/yaml/pyyaml/issues/601
jsonschema = "^4.23.0"  # Version 4.18.0 started to require Rust

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ipdb = "^0.13.13"
setuptools = "^75.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.djlint]
profile = "django"
