[tool.poetry]
name = "stimmungskalender"
version = "1.8.0"
description = "Self-hosted mood calendar"
authors = ["Rainer Hihn <hihn.rainer@gmail.com>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.5"
dj-database-url = "^2.3.0"
django-cors-headers = "^4.6.0"
django-registration = "^5.1.0"
django-rosetta = "^0.10.1"
djangorestframework = "^3.15.2"
python-decouple = "^3.8"
psycopg2 = "^2.9.10"
djangorestframework-dataclasses = "^1.3.1"
pyyaml = "^6.0.2"
inflection = "^0.5.1"
uritemplate = "^4.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ipdb = "^0.13.13"
setuptools = "^75.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.djlint]
profile = "django"
